--- a/foxy/distribution.yaml
+++ b/foxy/distribution.yaml
@@ -2336,7 +2336,7 @@ repositories:
       tags:
         release: release/foxy/{package}/{version}
       url: https://github.com/roboception-gbp/rc_common_msgs_ros2-release.git
-      version: 0.5.3-1
+      version: 0.5.3-1        
     source:
       test_pull_requests: true
       type: git
@@ -3626,6 +3626,21 @@ repositories:
       url: https://github.com/SICKAG/sick_scan2.git
       version: master
     status: developed
+  simple_launch:
+    doc:
+      type: git
+      url: https://github.com/oKermorgant/simple_launch.git
+      version: master
+    release:
+      tags:
+        release: release/foxy/{package}/{version}
+      url: https://github.com/oKermorgant/simple_launch-release.git
+      version: 1.0.2-1
+    source:
+      type: git
+      url: https://github.com/oKermorgant/simple_launch.git
+      version: master
+    status: maintained
   slam_toolbox:
     doc:
       type: git
